CI: Improve how images workflow works in forks
Use the respository owner name rather than hardcoding 'mesonbuild'

(This still does nothing if the docker credentials aren't in secrets)

--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -63,5 +63,5 @@ jobs:
 
       # Publish
       - name: Push the ${{ matrix.cfg.id }} image
-        run:  docker push mesonbuild/${{ matrix.cfg.id }}
+        run:  docker push ${{ github.repository_owner }}/{{ matrix.cfg.id }}
         if:   (github.event_name == 'push' || github.event_name == 'schedule') && env.HAS_DOCKER_CREDENTIALS == 'true'
