--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -34,6 +34,9 @@ jobs:
           - { name: OpenSUSE,         id: opensuse }
           - { name: Ubuntu Bionic,    id: bionic   }
     container: mesonbuild/${{ matrix.cfg.id }}:latest
+    env:
+      MESON_CI_JOBNAME: ${{ matrix.cfg.name }}
+
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
@@ -70,6 +73,9 @@ jobs:
             MESON_ARGS: '--unity=on'
             CC: 'gcc'
             CXX: 'g++'
+
+    env:
+      MESON_CI_JOBNAME: ${{ github.job }}
 
     container:
       image: mesonbuild/ubuntu-rolling
