CI: Cygwin: install more test prereqs

--- a/ci/ciimage/cygwin/Dockerfile
+++ b/ci/ciimage/cygwin/Dockerfile
@@ -12,25 +12,41 @@ RUN $url = 'https://cygwin.com/setup-x86_64.exe'; \
  Write-Host 'Installing ...'; \
  New-Item -ItemType directory -Path 'C:/tmp'; \
  Start-Process "C:/setup-x86_64.exe" -NoNewWindow -Wait -PassThru -ArgumentList @('-q','-n','-B','-R','C:/cygwin64','-l','C:/tmp','-s','https://mirrors.kernel.org/sourceware/cygwin/', '-P', '\
+bison,\
+doxygwn,\
 cmake,\
+flex,\
 gcc-fortran,\
 gcc-objc++,\
 gcc-objc,\
+gettext-devel,\
 git,\
 gobject-introspection,\
 gtk-doc,\
+itstool,\
+libQt5Core-devel,\
+libQt5Gui-devel,\
+libSDL2-devel,\
 libboost-devel,\
 libglib2.0-devel,\
 libgtk3-devel,\
+libllvm-devel,\
+libllvm-devel-static,\
+libncurses-devel,\
+libopenmpi-devel,\
+libprotobuf-devel,\
+libwmf-devel,\
 libxml2-devel,\
 libxslt-devel,\
 ninja,\
 python3-devel,\
+python3-gi,\
 python3-libxml2,\
 python3-libxslt,\
 python39-pip,\
 python39-wheel,\
 vala,\
+wget,\
 zlib-devel\
 '); \
  \
